# glean-hs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  action-test.txt  cabal.project  glean-hs.cabal
.github/workflows/: ci.yml
.hie/: Main.hie
.hie/Glean/: FFI.hie  RocksDB.hie  Storage.hie
.hie/Glean/Indexer/: HIE.hie  Types.hie
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: glean-hs-0.1.0-inplace-glean-hs-ffi.conf  glean-hs-0.1.0-inplace-glean-hs-indexer.conf  glean-hs-0.1.0-inplace.conf  package.cache
haskell/app/: Main.hs
haskell/schema/: SCHEMA.md  src.angle
haskell/src/Glean/: FFI.hs  Query.hs  RocksDB.hs  Storage.hs
haskell/src/Glean/Indexer/: HIE.hs  Types.hs
haskell/test/: Spec.hs
haskell/test/Test/: FFI.hs  Indexer.hs  Storage.hs
src/: lib.rs
src/rts/: binary.rs  define.rs  fact.rs  factset.rs  id.rs  inventory.rs  lookup.rs  mod.rs  nat.rs  stacked.rs  store.rs  string.rs
src/rts/bytecode/: frame.rs  mod.rs  opcode.rs  syscall.rs  vm.rs
src/storage/: mod.rscat  rocksdb.rs
